<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:verticalScrollbarPosition="right"
    android:scrollbarSize="@dimen/scrollBar_normal_size">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.add.MeetingAddActivity"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/activity_add_meeting_choose_time_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/activity_meeting_toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/padding_normal_size"
            android:layout_margin="@dimen/margin_normal_size"
            android:textSize="@dimen/text_large_size"
            android:hint="Heure : "
            android:background="@drawable/outline"
            android:focusable="false"
            android:onClick="setTimeInput"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/activity_add_meeting_room_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/activity_add_meeting_choose_time_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/margin_normal_size"
            android:padding="@dimen/padding_normal_size"
            android:textSize="@dimen/text_large_size"
            android:hint="Salle "
            android:background="@drawable/outline"
            android:focusable="false"
            android:onClick="setRoomInput"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/activity_add_meeting_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/activity_add_meeting_room_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/padding_normal_size"
            android:layout_margin="@dimen/margin_normal_size"
            android:textSize="@dimen/text_large_size"
            android:hint="Votre nom"
            android:background="@drawable/outline" />

        <LinearLayout
            android:id="@+id/activity_add_member_input_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/activity_add_meeting_name_input"
            app:layout_constraintStart_toStartOf="@id/activity_add_meeting_name_input"
            app:layout_constraintEnd_toEndOf="@id/activity_add_meeting_name_input"
            android:layout_margin="@dimen/margin_normal_size"
            android:padding="@dimen/layout_padding_normal_size"
            android:orientation="horizontal"
            android:background="@drawable/outline">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/activity_add_meeting_members_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:layout_constraintTop_toBottomOf="@+id/activity_add_meeting_name_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/layout_margin_horizontal_normal_size"
                android:hint="participants@email.com"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:ellipsize="start"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:textSize="@dimen/text_large_size" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/activity_add_meeting_members_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/activity_add_meeting_name_input"
                app:layout_constraintBottom_toTopOf="@+id/activity_add_meeting_members_list_txt"
                app:layout_constraintEnd_toEndOf="@id/activity_add_meeting_members_input"
                android:layout_margin="@dimen/margin_small_size"
                android:src="@drawable/ic_add_24"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/activity_add_meeting_members_list_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/activity_add_member_input_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/outline"
            android:layout_margin="@dimen/margin_normal_size"
            android:padding="@dimen/padding_normal_size"
            android:textSize="@dimen/text_normal_size"
            android:lineSpacingExtra="@dimen/line_spacing_normal"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/activity_add_meeting_validate_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/activity_add_meeting_members_list_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="@dimen/padding_normal_size"
            android:layout_margin="@dimen/margin_normal_size"
            android:text="valider"
            android:textSize="@dimen/text_large_size"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

