...
            android:textSize="@dimen/text_extralarge_size"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/activity_detail_meeting_member_list_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/activity_detail_meeting_member_title_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/outline"
...
